EngSketchPad/src/EGADS/include/egads.h

__ProtoExt__ void  EG_free( /*@null@*/ /*@only@*/ void *pointer );
/* base-level object functions */

__ProtoExt__ void EG_revision( int *major, int *minor, const char **OCCrev );
__ProtoExt__ int  EG_open( ego *context );
__ProtoExt__ int  EG_loadModel( ego context, int bflg, const char *name,
                                ego *model );
__ProtoExt__ int  EG_saveModel( const ego model, const char *name );
__ProtoExt__ int  EG_exportModel( ego model, size_t *nbytes, char **stream );
__ProtoExt__ int  EG_deleteObject( ego object );
__ProtoExt__ int  EG_makeTransform( ego context, const double *xform,
                                    ego *oform );
__ProtoExt__ int  EG_getTransformation( const ego oform, double *xform );
__ProtoExt__ int  EG_getContext( ego object, ego *context );
__ProtoExt__ int  EG_setOutLevel( ego context, int outLevel );
__ProtoExt__ int  EG_updateThread( ego context );
__ProtoExt__ int  EG_getInfo( const ego object, int *oclass, int *mtype,
                              /*@null@*/ ego *topObj, /*@null@*/ ego *prev,
                              /*@null@*/ ego *next );