EngSketchPad/pyESP/pyEGADS/egads.py

###########################################################################
#                                                                         #
# pyEGADS --- Python version of EGADS API                                 #
#                                                                         #
#                                                                         #
#      Copyright 2011-2022, Massachusetts Institute of Technology         #
#      Licensed under The GNU Lesser General Public License, version 2.1  #
#      See http://www.opensource.org/licenses/lgpl-2.1.php                #
#                                                                         #
#   This API was inspired by the egads4py package:                        #
#      https://github.com/smdogroup/egads4py                              #
#                                                                         #
###########################################################################

import ctypes
from ctypes import POINTER, c_int, c_size_t, c_double, c_void_p, c_char, c_char_p
import os
import sys
import weakref
import itertools
from sys import version_info

# get the value of _ESP_ROOT
try:
    _ESP_ROOT = os.environ["ESP_ROOT"]
except:
    raise RuntimeError("ESP_ROOT must be set -- Please fix the environment...")

# load the shared library
if sys.platform.startswith('darwin'):
    _egads = ctypes.CDLL(_ESP_ROOT + "/lib/libegads.dylib")
elif sys.platform.startswith('linux'):
    _egads = ctypes.CDLL(_ESP_ROOT + "/lib/libegads.so")
elif sys.platform.startswith('win32'):
    if version_info.major == 3 and version_info.minor < 8:
        _egads = ctypes.CDLL(_ESP_ROOT + "\\lib\\egads.dll")
    else:
        _egads = ctypes.CDLL(_ESP_ROOT + "\\lib\\egads.dll", winmode=0)
else:
    raise IOError("Unknown platform: " + sys.platform)

__all__ = ["revision", "Context", "ego", "c_ego",
           "csystem", "c_to_py", "EGADSError"]

# =============================================================================
# Taken from weakref to be used with older versions of Python
if sys.version_info[:2] < (3, 4):
    class finalize:
        """Class for finalization of weakrefable objects

        finalize(obj, func, *args, **kwargs) returns a callable finalizer
        object which will be called when obj is garbage collected. The
        first time the finalizer is called it evaluates func(*arg, **kwargs)
        and returns the result. After this the  is dead, and
        calling it just returns None.

        When the program exits any remaining finalizers for which the
        atexit attribute is true will be run in reverse order of creation.
        By default atexit is true.
        """

        # Finalizer objects don't have any state of their own.  They are
        # just used as keys to lookup _Info objects in the registry.  This
        # ensures that they cannot be part of a ref-cycle.

        __slots__ = ()
        _registry = {}
        _shutdown = False
        _index_iter = itertools.count()
        _dirty = False
        _registered_with_atexit = False

        class _Info:
            __slots__ = ("weakref", "func", "args", "kwargs", "atexit", "index")

        def __init__(self, obj, func, *args, **kwargs):
            if not self._registered_with_atexit:
                # We may register the exit function more than once because
                # of a thread race, but that is harmless
                import atexit
                atexit.register(self._exitfunc)
                finalize._registered_with_atexit = True
            info = self._Info()
            info.weakref = weakref.ref(obj, self)
            info.func = func
            info.args = args
            info.kwargs = kwargs or None
            info.atexit = True
            info.index = next(self._index_iter)
            self._registry[self] = info
            finalize._dirty = True

        def __call__(self, _=None):
            """If alive then mark as dead and return func(*args, **kwargs);
            otherwise return None"""
            info = self._registry.pop(self, None)
            if info and not self._shutdown:
                return info.func(*info.args, **(info.kwargs or {}))

        def detach(self):
            """If alive then mark as dead and return (obj, func, args, kwargs);
            otherwise return None"""
            info = self._registry.get(self)
            obj = info and info.weakref()
            if obj is not None and self._registry.pop(self, None):
                return (obj, info.func, info.args, info.kwargs or {})

        def peek(self):
            """If alive then return (obj, func, args, kwargs);
            otherwise return None"""
            info = self._registry.get(self)
            obj = info and info.weakref()
            if obj is not None:
                return (obj, info.func, info.args, info.kwargs or {})

        @property
        def alive(self):
            """Whether finalizer is alive"""
            return self in self._registry

        @property
        def atexit(self):
            """Whether finalizer should be called at exit"""
            info = self._registry.get(self)
            return bool(info) and info.atexit

        @atexit.setter
        def atexit(self, value):
            info = self._registry.get(self)
            if info:
                info.atexit = bool(value)

        def __repr__(self):
            info = self._registry.get(self)
            obj = info and info.weakref()
            if obj is None:
                return '<%s object at %#x; dead>' % (type(self).__name__, id(self))
            else:
                return '<%s object at %#x; for %r at %#x>' % \
                    (type(self).__name__, id(self), type(obj).__name__, id(obj))

        @classmethod
        def _select_for_exit(cls):
            # Return live finalizers marked for exit, oldest first
            L = [(f,i) for (f,i) in cls._registry.items() if i.atexit]
            L.sort(key=lambda item:item[1].index)
            return [f for (f,i) in L]

        @classmethod
        def _exitfunc(cls):
            # At shutdown invoke finalizers for which atexit is true.
            # This is called once all other non-daemonic threads have been
            # joined.
            reenable_gc = False
            try:
                if cls._registry:
                    import gc
                    if gc.isenabled():
                        reenable_gc = True
                        gc.disable()
                    pending = None
                    while True:
                        if pending is None or finalize._dirty:
                            pending = cls._select_for_exit()
                            finalize._dirty = False
                        if not pending:
                            break
                        f = pending.pop()
                        try:
                            # gc is disabled, so (assuming no daemonic
                            # threads) the following is the only line in
                            # this function which might trigger creation
                            # of a new finalizer
                            f()
                        except Exception:
                            sys.excepthook(*sys.exc_info())
                        assert f not in cls._registry
            finally:
                # prevent any more finalizers from executing during shutdown
                finalize._shutdown = True
                if reenable_gc:
                    gc.enable()
else:
    finalize = weakref.finalize
    
# =============================================================================
# Decode function to play nice with Pyhon 2.7
def _decode(data):
    if version_info.major > 2 and isinstance(data, bytes):
        return data.decode()
    return data

# =============================================================================
# define union for c_egAttr structure
class union_egAttr(ctypes.Union):
    pass

union_egAttr.__slots__ = [
    'integer',
    'integers',
    'real',
    'reals',
    'string',
]
union_egAttr._fields_ = [
    ('integer', c_int),
    ('integers', POINTER(c_int)),
    ('real', c_double),
    ('reals', POINTER(c_double)),
    ('string', c_char_p),
]

# =============================================================================
# define c_egAttr structure
class c_egAttr(ctypes.Structure):
    pass

c_egAttr.__slots__ = [
    'name',
    'type',
    'length',
    'vals',
]
c_egAttr._fields_ = [
    ('name', c_char_p),
    ('type', c_int),
    ('length', c_int),
    ('vals', union_egAttr),
]

# =============================================================================
# define c_egAttrSeq structure
class c_egAttrSeq(ctypes.Structure):
    pass

c_egAttrSeq.__slots__ = [
    'root',
    'nSeq',
    'attrSeq',
]
c_egAttrSeq._fields_ = [
    ('root', c_char_p),
    ('nSeq', c_int),
    ('attrSeq', POINTER(c_int)),
]

# =============================================================================
# define c_egAttrSeq structure
class c_egAttrs(ctypes.Structure):
    pass

c_egAttrs.__slots__ = [
    'nattrs',
    'attrs',
    'nseqs',
    'seqs',
]
c_egAttrs._fields_ = [
    ('nattrs', c_int),
    ('attrs', POINTER(c_egAttr)),
    ('nseqs', c_int),
    ('seqs', POINTER(c_egAttrSeq)),
]

# =============================================================================
# define c_egObject structure
class c_egObject(ctypes.Structure):
    pass

c_egObject.__slots__ = [
    'magicnumber',
    'oclass',
    'mtype',
    'attrs',
    'blind',
    'topObj',
    'tref',
    'prev',
    'next',
]

c_egObject._fields_ = [
    ("magicnumber", ctypes.c_int),           # must be set to validate the object
    ("oclass", ctypes.c_short),              # object Class
    ("mtype", ctypes.c_short),               # member Type
    ("attrs", ctypes.POINTER(None)),         # object Attributes or Reference
    ("blind", ctypes.POINTER(None)),         # blind pointer to object data
    ("topObj", ctypes.POINTER(c_egObject)),  # top of the hierarchy or context (if top)
    ("tref", ctypes.POINTER(c_egObject)),    # threaded list of references
    ("prev", ctypes.POINTER(c_egObject)),    # back pointer
    ("next", ctypes.POINTER(c_egObject)),    # forward pointer
]

# define the c_ego (ego) pointer
c_ego = ctypes.POINTER(c_egObject)

# =============================================================================
#
# egads.h functions
#
# =============================================================================

# egads functions declarations
_egads.EG_free.argtypes = [c_void_p]
_egads.EG_free.restype = None

_egads.EG_revision.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_char_p)]
_egads.EG_revision.restype = None

_egads.EG_open.argtypes = [POINTER(c_ego)]
_egads.EG_open.restype = c_int

_egads.EG_loadModel.argtypes = [c_ego, c_int, c_char_p, POINTER(c_ego)]
_egads.EG_loadModel.restype = c_int

_egads.EG_saveModel.argtypes = [c_ego, c_char_p]
_egads.EG_saveModel.restype = c_int

_egads.EG_exportModel.argtypes = [c_ego, POINTER(c_size_t), POINTER(c_char_p)]
_egads.EG_exportModel.restype = c_int

_egads.EG_deleteObject.argtypes = [c_ego]
_egads.EG_deleteObject.restype = c_int

_egads.EG_makeTransform.argtypes = [c_ego, POINTER(c_double), POINTER(c_ego)]
_egads.EG_makeTransform.restype = c_int

_egads.EG_getTransformation.argtypes = [c_ego, POINTER(c_double)]
_egads.EG_getTransformation.restype = c_int

_egads.EG_getContext.argtypes = [c_ego, POINTER(c_ego)]
_egads.EG_getContext.restype = c_int

_egads.EG_setOutLevel.argtypes = [c_ego, c_int]
_egads.EG_setOutLevel.restype = c_int

_egads.EG_updateThread.argtypes = [c_ego]
_egads.EG_updateThread.restype = c_int

_egads.EG_getInfo.argtypes = [c_ego, POINTER(c_int), POINTER(c_int), POINTER(c_ego), POINTER(c_ego), POINTER(c_ego)]
_egads.EG_getInfo.restype = c_int
